--- a/site/index.html
+++ b/site/index.html
@@ -2,9 +2,17 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Hello Coursera!</title>
+	<title>Mamma ya Baba mere 200 rupee udhaar dedain
+Batool Pagal
+Fatima Pagal
+Zehra Pagal
+Ali smart,famous,intelligent,handsome.</title>
 </head>
 <body>
-<h1>Hello Coursera!It's a great course!</h1>
+<h1>Mamma ya Baba mere 200 rupee udhaar dedain
+Batool Pagal
+Fatima Pagal
+Zehra Pagal
+Ali smart,famous,intelligent,handsome.</h1>
 </body>
 </html>
